data/all_generated_tests/raw_wast_tests/loop_InfiniteLoops_478.wast
;; 9. **Test Description**: Test a `loop` that contains an unexpected `end` instruction leading to improper loop termination. This should check if the `end` instruction correctly terminates the loop.    **Constraint**: Ensuring `end` instruction correctly matches and terminates loop sequence.    **Infinite Loop Relevance**: Verifies that `end` mismanagement does not cause indefinite execution.

(assert_invalid
  (module
    (func $unexpected-end-loop
      (loop
        (block
          (i32.const 10)
          (end)
          (i32.const 0)
        )
      )
    )
  )
  "type mismatch"
)